[package]
name = "vncviewer"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true
opt-level = 3
panic = "abort"
codegen-units = 1

[dependencies]
anyhow = "1.0.103"
arboard = "3.6.1"
tracing-subscriber = "0.3.23"
bytemuck = "1.25.0"
keyring-core = "1.0.0"
miniquad = "0.4.11"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tracing = { version = "0.1.44", features = ["log"] }
system-fonts = "0.1.2"

[dependencies.vnc]
package = "vnc-rs"
git = "https://github.com/plos-clan/vnc-rs"

[dependencies.egui]
version = "0.35.0"
default-features = false
features = ["bytemuck"]

[target.'cfg(windows)'.dependencies]
windows-native-keyring-store = "1.1.0"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.61.2"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
zbus-secret-service-keyring-store.version = "1.0.0"
zbus-secret-service-keyring-store.features = ["rt-tokio-crypto-rust"]
